--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.15",
     "md5": "^2.2.1",
     "moment": "^2.24.0",
+    "mysql": "^2.17.1",
     "oracledb": "^4.0.1",
     "pino": "^5.14.0",
     "simple-oracledb": "^1.4.2",
