--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mysql": "^2.17.1",
     "oracledb": "^4.0.1",
     "pino": "^5.14.0",
+    "pug": "^2.0.4",
     "simple-oracledb": "^1.4.2",
     "validator": "^12.1.0",
     "xml-js": "^1.6.11"
