--- a/package.json
+++ b/package.json
@@ -25,14 +25,20 @@
   "dependencies": {
     "async": "^3.1.0",
     "axios": "^0.19.0",
+    "fastify": "^2.10.0",
+    "fastify-routes": "^2.0.3",
+    "fastify-static": "^2.5.0",
+    "get-port": "^5.0.0",
     "glob": "^7.1.6",
     "lodash": "^4.17.15",
+    "lowdb": "^1.0.0",
     "md5": "^2.2.1",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "oracledb": "^4.0.1",
     "pino": "^5.14.0",
     "pug": "^2.0.4",
+    "sequelize": "^5.21.2",
     "simple-oracledb": "^1.4.2",
     "validator": "^12.1.0",
     "xml-js": "^1.6.11"
