--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
     "fastify-static": "^2.5.0",
     "get-port": "^5.0.0",
     "glob": "^7.1.6",
+    "joi": "^14.3.1",
     "lodash": "^4.17.15",
     "lowdb": "^1.0.0",
     "md5": "^2.2.1",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
+    "object-hash": "^2.0.0",
     "oracledb": "^4.0.1",
     "pino": "^5.14.0",
+    "pino-pretty": "^3.4.0",
     "pug": "^2.0.4",
     "sequelize": "^5.21.2",
     "simple-oracledb": "^1.4.2",
