--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "get-port": "^5.0.0",
     "glob": "^7.1.6",
     "joi": "^14.3.1",
+    "json5": "^2.1.1",
     "lodash": "^4.17.15",
     "lowdb": "^1.0.0",
     "md5": "^2.2.1",
