--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fastify": "^2.10.0",
     "fastify-routes": "^2.0.3",
     "fastify-static": "^2.5.0",
+    "find": "^0.3.0",
     "get-port": "^5.0.0",
     "glob": "^7.1.6",
     "joi": "^14.3.1",
