--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "async": "^3.1.0",
     "axios": "^0.19.0",
     "csv-parser": "^2.3.2",
+    "delay": "^4.3.0",
     "fastify": "^2.10.0",
     "fastify-routes": "^2.0.3",
     "fastify-static": "^2.5.0",
