--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "glob": "^7.1.6",
     "joi": "^14.3.1",
     "json5": "^2.1.1",
+    "jsondiffpatch": "^0.3.11",
     "lodash": "^4.17.15",
     "lowdb": "^1.0.0",
     "md5": "^2.2.1",
