--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   "dependencies": {
     "async": "^3.1.0",
     "axios": "^0.19.0",
+    "csv-parse": "^4.8.2",
     "csv-parser": "^2.3.2",
+    "csvtojson": "^2.0.10",
     "delay": "^4.3.0",
+    "fast-csv": "^3.4.0",
     "fastify": "^2.10.0",
     "fastify-routes": "^2.0.3",
     "fastify-static": "^2.5.0",
@@ -45,6 +48,8 @@
     "oracledb": "^4.0.1",
     "pino": "^5.14.0",
     "pino-pretty": "^3.4.0",
+    "pouchdb": "^7.1.1",
+    "pouchdb-find": "^7.1.1",
     "pug": "^2.0.4",
     "sequelize": "^5.21.2",
     "simple-oracledb": "^1.4.2",
