--- a/package.json
+++ b/package.json
@@ -37,10 +37,14 @@
     "get-port": "^5.0.0",
     "glob": "^7.1.6",
     "joi": "^14.3.1",
+    "js-yaml": "^3.13.1",
     "json5": "^2.1.1",
     "jsondiffpatch": "^0.3.11",
+    "klaw-sync": "^6.0.0",
+    "knex": "^0.20.4",
     "lodash": "^4.17.15",
     "lowdb": "^1.0.0",
+    "mariadb": "^2.1.4",
     "md5": "^2.2.1",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
