--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "knex": "^0.20.4",
     "lodash": "^4.17.15",
     "lowdb": "^1.0.0",
+    "map-obj": "^4.1.0",
     "mariadb": "^2.1.4",
     "md5": "^2.2.1",
     "moment": "^2.24.0",
