--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"nodemon bin/ui-server.js -- -e dev",
+    "ui":"cd ui & npm run serve",
+    "all":"npx npm-run-all -p ui dev"
+  },
+  "nodemonConfig": {
+    "ignore": ["test/*", "docs/*"],
+    "delay": "2500"
   },
   "repository": {
     "type": "git",
@@ -62,5 +69,9 @@
     "simple-oracledb": "^1.4.2",
     "validator": "^12.1.0",
     "xml-js": "^1.6.11"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2",
+    "npm-run-all": "^4.1.5"
   }
 }
