--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "buefy": "^0.8.8",
     "core-js": "^2.6.5",
     "iview": "^3.5.4",
     "less-loader": "^5.0.0",
