--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "pouchdb-find": "^7.1.1",
     "pouchdb-upsert": "^2.2.0",
     "pug": "^2.0.4",
+    "require-from-string": "^2.0.2",
     "sequelize": "^5.21.2",
     "simple-oracledb": "^1.4.2",
     "upath": "^1.2.0",
