--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "find": "^0.3.0",
     "get-port": "^5.0.0",
     "glob": "^7.1.6",
+    "glob-promise": "^3.4.0",
     "joi": "^14.3.1",
     "js-yaml": "^3.13.1",
     "json5": "^2.1.1",
