--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
     "fastify-cors": "^3.0.0",
     "iview": "^3.5.4",
     "less-loader": "^5.0.0",
+    "lodash": "^4.17.15",
     "serialize-javascript": "^2.1.2",
     "upath": "^1.2.0",
     "vue": "^2.6.10",
