--- a/ui/package.json
+++ b/ui/package.json
@@ -20,7 +20,8 @@
     "vue-codemirror-lite": "^1.0.4",
     "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.1.3",
-    "vue3-multipage": "^2.0.1"
+    "vue3-multipage": "^2.0.1",
+    "vuedraggable": "^2.23.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
