--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "md5": "^2.2.1",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
+    "nano": "^8.1.0",
     "object-hash": "^2.0.0",
     "oracledb": "^4.0.1",
     "pino": "^5.14.0",
