--- a/ui/package.json
+++ b/ui/package.json
@@ -18,8 +18,10 @@
     "upath": "^1.2.0",
     "vee-validate": "^3.2.1",
     "vue": "^2.6.10",
+    "vue-2-crumbs": "^0.5.4",
     "vue-codemirror-lite": "^1.0.4",
     "vue-material": "^1.0.0-beta-11",
+    "vue-prism-editor": "^0.3.0",
     "vue-router": "^3.1.3",
     "vue3-multipage": "^2.0.1",
     "vuedraggable": "^2.23.2"
