--- a/ui/package.json
+++ b/ui/package.json
@@ -24,7 +24,8 @@
     "vue-prism-editor": "^0.3.0",
     "vue-router": "^3.1.3",
     "vue3-multipage": "^2.0.1",
-    "vuedraggable": "^2.23.2"
+    "vuedraggable": "^2.23.2",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
