--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "buefy": "^0.8.8",
     "core-js": "^2.6.5",
     "fastify-cors": "^3.0.0",
