--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "sequelize": "^5.21.2",
     "serialize-javascript": "^2.1.2",
     "simple-oracledb": "^1.4.2",
+    "sqlite3": "^4.1.1",
     "upath": "^1.2.0",
     "validator": "^12.1.0",
     "vuedraggable": "^2.23.2",
