--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "pouchdb-find": "^7.1.1",
     "pouchdb-upsert": "^2.2.0",
     "pug": "^2.0.4",
+    "request": "^2.88.0",
     "require-from-string": "^2.0.2",
     "sequelize": "^5.21.2",
     "serialize-javascript": "^2.1.2",
