--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "pouchdb-upsert": "^2.2.0",
     "pug": "^2.0.4",
     "request": "^2.88.0",
+    "request-promise": "^4.2.5",
     "require-from-string": "^2.0.2",
     "sequelize": "^5.21.2",
     "serialize-javascript": "^2.1.2",
