--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "nano": "^8.1.0",
+    "node-eval": "^2.0.0",
     "object-hash": "^2.0.0",
     "oracledb": "^4.0.1",
     "p-map": "^3.0.0",
