--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "csv-parser": "^2.3.2",
     "csvtojson": "^2.0.10",
     "delay": "^4.3.0",
+    "eval": "^0.1.4",
     "fast-csv": "^3.4.0",
     "fastify": "^2.10.0",
     "fastify-cors": "^3.0.0",
