--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "get-port": "^5.0.0",
     "glob": "^7.1.6",
     "glob-promise": "^3.4.0",
+    "highland": "^2.13.5",
     "joi": "^14.3.1",
     "js-yaml": "^3.13.1",
     "json5": "^2.1.1",
