--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "delay": "^4.3.0",
     "eval": "^0.1.4",
     "fast-csv": "^3.4.0",
+    "fast-json-stringify": "^1.16.4",
     "fastify": "^2.10.0",
     "fastify-cors": "^3.0.0",
     "fastify-routes": "^2.0.3",
