--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/ghadad/datahub#readme",
   "dependencies": {
+    "JSONStream": "^1.3.5",
     "async": "^3.1.0",
     "axios": "^0.19.0",
     "csv-parse": "^4.8.2",
@@ -70,6 +71,7 @@
     "nano": "^8.1.0",
     "node-eval": "^2.0.0",
     "object-hash": "^2.0.0",
+    "oboe": "^2.1.5",
     "oracledb": "^4.0.1",
     "p-map": "^3.0.0",
     "pino": "^5.14.0",
