--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "homepage": "https://github.com/ghadad/datahub#readme",
   "dependencies": {
     "JSONStream": "^1.3.5",
+    "acron": "latest",
     "async": "^3.1.0",
     "axios": "^0.19.0",
     "csv-parse": "^4.8.2",
@@ -66,6 +67,8 @@
     "map-obj": "^4.1.0",
     "mariadb": "^2.1.4",
     "md5": "^2.2.1",
+    "minimist": "^1.2.5",
+    "mkdirp": "^1.0.3",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "nano": "^8.1.0",
@@ -84,6 +87,7 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
     "require-from-string": "^2.0.2",
+    "rfc6902": "^3.0.4",
     "sequelize": "^5.21.2",
     "serialize-javascript": "^2.1.2",
     "simple-oracledb": "^1.4.2",
