--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "nano": "^8.1.0",
+    "node-cron": "^2.0.3",
     "node-eval": "^2.0.0",
     "object-hash": "^2.0.0",
     "oboe": "^2.1.5",
@@ -90,6 +91,7 @@
     "rfc6902": "^3.0.4",
     "sequelize": "^5.21.2",
     "serialize-javascript": "^2.1.2",
+    "shelljs": "^0.8.3",
     "shortid": "^2.2.15",
     "simple-oracledb": "^1.4.2",
     "sqlite3": "^4.1.1",
