--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,9 @@
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "buefy": "^0.8.8",
     "core-js": "^2.6.5",
+    "cron-parser": "^2.13.0",
+    "cronstrue": "^1.92.0",
+    "css-loader": "^3.4.2",
     "fastify-cors": "^3.0.0",
     "iview": "^3.5.4",
     "less-loader": "^5.0.0",
@@ -34,7 +37,7 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
-    "@vue/cli-plugin-eslint": "^3.9.0",
+    "@vue/cli-plugin-eslint": "^4.2.3",
     "@vue/cli-service": "^4.2.2",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
@@ -53,11 +56,6 @@
     "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
     }
   },
   "postcss": {
