--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "homepage": "https://github.com/ghadad/datahub#readme",
   "dependencies": {
     "JSONStream": "^1.3.5",
+    "acorn": "^5.7.4",
     "acron": "latest",
     "async": "^3.2.0",
     "axios": "^0.19.2",
@@ -59,6 +60,7 @@
     "js-yaml": "^3.13.1",
     "json5": "^2.1.2",
     "jsondiffpatch": "^0.3.11",
+    "kind-of": "^6.0.3",
     "klaw-sync": "^6.0.0",
     "knex": "^0.20.13",
     "lockfile": "^1.0.4",
