--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "csvtojson": "^2.0.10",
     "delay": "^4.3.0",
     "eval": "^0.1.4",
+    "event-stream": "^4.0.1",
     "fast-csv": "^3.7.0",
     "fast-json-stringify": "^1.18.0",
     "fastify": "^2.13.0",
