--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "get-port": "^5.1.1",
     "glob": "^7.1.6",
     "glob-promise": "^3.4.0",
+    "handlebars": "^4.7.6",
     "highland": "^2.13.5",
     "joi": "^14.3.1",
     "js-yaml": "^3.13.1",
@@ -71,8 +72,9 @@
     "mariadb": "^2.3.1",
     "md5": "^2.2.1",
     "minimist": "^1.2.5",
-    "mkdirp": "^1.0.3",
+    "mkdirp": "^1.0.4",
     "moment": "^2.24.0",
+    "mustache": "^4.0.1",
     "mysql": "^2.18.1",
     "nano": "^8.2.2",
     "node-cron": "^2.0.3",
